Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   app.js
	modified:   package.json
	modified:   pnpm-lock.yaml
	new file:   public/images/svg/closeButton.svg
	renamed:    public/images/svg/upload.svg -> public/images/svg/uploadButton.svg
	new file:   public/images/svg/uploadFile.svg
	modified:   public/js/uploadSetting.js
	new file:   public/js/uploadSetting.old
	modified:   public/stylesheets/file.css
	modified:   public/stylesheets/listview.css
	new file:   public/stylesheets/setting.css
	modified:   public/stylesheets/upload.css
	new file:   public/stylesheets/upload.old
	modified:   readme.md
	modified:   routes/index.js
	modified:   views/file.html

--- a/public/stylesheets/listview.css
+++ b/public/stylesheets/listview.css
@@ -31,13 +31,12 @@ a.folder {
 
 .dirname{
     position: absolute;
-    left: 10%;
+    left: 7%;
 }
 
 .filename{
-
     position: absolute;
-    left: 10%;
+    left: 7%;
     overflow: hidden;
 }
 
@@ -80,10 +79,16 @@ a.folder {
 
 /*最小xxx px才不会触发 或者直接让css完全固定 @media screen*/
 
-@media (max-width: 872px) {
+@media (max-width: 1200px) {
         body{
             /*width: 730px;*/
             width: 756px;
         }
+
+        .dirname, .filename{
+            left: 11%;
+        }
+
+
 }
 
