--- a/public/stylesheets/file.css
+++ b/public/stylesheets/file.css
@@ -16,7 +16,13 @@ a {
     color: orange;
 }
 
+body{
+    min-width: 900px;
+}
+
 #nav{
+    font-family: system-ui;
+    background-color: ;
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.5em;
@@ -59,16 +65,16 @@ a {
     /*坑: 找一个箭头svg 拖着这两个容器展开-关闭*/
 }
 
-#viewSetting{
+
+#setting{
     position: fixed;
-    right: 1%;
-    bottom: 15%;
+    bottom: 5%;
+    right: 2%;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1em;
 }
-
-
 
 .button_BG{
     display: flex;
@@ -80,4 +86,22 @@ a {
     border-radius: 30px;
     cursor: pointer;
 }
+
+#uploadButton{
+    background-color: rgba(114,17,140,0.3);
+}
+
+#viewSetting{
+
+}
+
+#uploadSetting{
+    
+}
+
+
+
+
+
+
 
