--- a/public/stylesheets/upload.css
+++ b/public/stylesheets/upload.css
@@ -1,29 +1,110 @@
-#uploadButton{
-    background-color: rgba(114,17,140,0.3);
+:root {
+    --main-bg-color: #edf5fe;
+    --light-blue: #03a9f4;
+    --border-color: #0288d147;
+    --container-width: 500px;
 }
+/*CSS变量 伪类文档树 :root代表着<html>元素*/
 
-#uploadSetting{
+.upload-container {
+	/*visibility: hidden;*/
+    min-width: 200px;
+    min-height: 300px;
     position: fixed;
-    right: 1%;
-    bottom: 6%;
+    background: #fff;
+    border-radius: 25px;
+    box-shadow: 0px 20px 20px 0px #00000017;
+    height: 45%;
+    width: 50%;
+    top: 22%;
+    left: 25%;
+    z-index: 2;
+    transition: linear 0.5s;
+
+}
+
+#uploadNav{
     display: flex;
+    width: 100%;
+    height: 7%;
+    justify-content: flex-end;
+}
+
+#closeUploadButton{
+
+    height: 1.5em;
+    width: 1.5em;
+    /*border: 1px solid black;*/
+    cursor: pointer;
+}
+
+#closeUploadButton img{
+    position: relative;
+    right: 9px;
+    top: 5px;
+}
+
+.upload-container,
+.drop-zone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /*给下边文字留出空位*/
+
+}
+
+/*flex: */
+.drop-zone{
+    justify-content: center; /*文字居中*/
 }
 
 
-#uploadOptions{
-	position: fixed;
-	height: 600px;
-	width: 60%;
-	top: 8%;
-	left: 20%;
-	border: 1px solid black;
-	transition: linear 0.5s;
-	border-radius: 15px;
+.drop-zone {
+    width: var(--container-width); /*js in css? CSS变量*/
+    height: 200px;
+    min-height: 100px;
+    border: 2px dashed var(--border-color);
+    border-radius: 10px;
+    margin: 23px;
+    transition: 0.2s all ease-in;
 }
 
-@media (max-width: 872px) {
-        uploadOptions{
-            /*width: 730px;*/
-            width: 550px;
-        }
+.drop-zone input { /*form表单 input属性带来的文字 不予显示*/
+  display: none;
 }
+
+.drop-zone.dragging{
+  background: var(--main-bg-color);
+  border-color: #0288D141;
+}
+
+.drop-zone .title{
+    color: #7F7F7FAA;
+}
+
+.upload-container form{
+    font-family: system-ui; /*默认都是直接用的系统内置字体 微软雅黑*/
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#browseBtn {
+  color: #2196f3;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 900px){
+
+	:root {
+	    --container-width: 100%; /*使drop-zone跟随页面缩小而缩小*/
+	}
+
+	.upload-container{
+	    height: 320px;
+	    width: 450px;
+	}
+  
+}
+
