Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   app.js
	modified:   index.js
	modified:   package.json
	modified:   pnpm-lock.yaml
	modified:   public/js/uploadSetting.js
	deleted:    public/js/uploadSetting.old
	modified:   public/stylesheets/gridview.css
	modified:   public/stylesheets/listview.css
	modified:   readme.md
	renamed:    routes/index.js -> routes/main.js
	new file:   views/Lab.html
	modified:   views/file.html
	renamed:    views/test.html -> views/index.html
	modified:   views/indexdir.html

--- a/public/stylesheets/gridview.css
+++ b/public/stylesheets/gridview.css
@@ -18,17 +18,17 @@
      
 }
 
-#information{
-    display: none;
+#status, #information{
+    visibility: hidden;
 }
 
 #files{
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5em;
+    row-gap: 1.5em;
 }
 
-#dirlist, #filelist{
+#dirlist, #fileslist{
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
