--- a/views/indexdir.html
+++ b/views/indexdir.html
@@ -40,7 +40,7 @@ ul li a{
     点击以访问目录
     <ul>
         <li>
-            <a href="http://<%= dataip %>/filelist?path=C:">
+            <a href="http://<%= dataip %>/fileslist?path=C:">
                 <svg class="icons" aria-hidden="true">
                     <use xlink:href="#directory_md"></use>
                 </svg>
@@ -49,7 +49,7 @@ ul li a{
         </li>
 
         <li>
-           <a href="http://<%= dataip %>/filelist?path=D:">
+           <a href="http://<%= dataip %>/fileslist?path=D:">
                 <svg class="icons" aria-hidden="true">
                     <use xlink:href="#directory_md"></use>
                 </svg>
@@ -59,7 +59,7 @@ ul li a{
         </li>
 
         <li>
-            <a href="http://<%= dataip %>/filelist?path=E:">
+            <a href="http://<%= dataip %>/fileslist?path=E:">
                 <svg class="icons" aria-hidden="true">
                     <use xlink:href="#directory_md"></use>
                 </svg>
