Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   app.js
	modified:   package.json
	modified:   pnpm-lock.yaml
	new file:   public/images/svg/more.svg
	new file:   public/images/svg/uploadProgress.svg
	new file:   public/js/AnotherUploadWay.backup
	modified:   public/js/uploadSetting.js
	modified:   public/stylesheets/file.css
	modified:   public/stylesheets/font.css
	modified:   public/stylesheets/gridview.css
	modified:   public/stylesheets/listview.css
	modified:   public/stylesheets/upload.css
	deleted:    public/stylesheets/upload.old
	modified:   readme.md
	modified:   routes/main.js
	modified:   views/Lab.html
	modified:   views/file.html

--- a/views/Lab.html
+++ b/views/Lab.html
@@ -8,6 +8,12 @@
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
 
+<style type="text/css">
+    body{
+        padding: 50px;
+    }
+</style>
+
 <script type="text/javascript">
     function trigger(){
         fetch("/ping", {
