--- a/public/stylesheets/file.css
+++ b/public/stylesheets/file.css
@@ -17,15 +17,32 @@ a {
 }
 
 body{
+    padding-right:15px;
+    padding-bottom:15px;
     min-width: 900px;
 }
 
 #nav{
+    height: 2em;
+    border: 1px solid black;
     font-family: system-ui;
     background-color: ;
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.5em;
+}
+
+#nav .toolitem{
+    width: 12%;
+    display: flex;
+}
+
+.NavUploadProcess{
+
+}
+
+.DisplaySetting{
+
 }
 
 #path{
@@ -41,6 +58,10 @@ body{
 
 #gap{
     padding: 0.8em;
+}
+
+#path, #list{
+    padding-left:50px;
 }
 
 #path li a{
@@ -64,6 +85,8 @@ body{
 #arrow{
     /*坑: 找一个箭头svg 拖着这两个容器展开-关闭*/
 }
+
+
 
 
 #setting{
@@ -100,8 +123,21 @@ body{
 }
 
 
-
-
+.FotterToast {
+    display: flex;
+    position: fixed;
+    bottom: 20%;
+    right: 48.7%;
+    transform: translate(50%, 60px);
+    padding: 10px 20px;
+    background: var(--light-blue);
+    color: #fff;
+    border-radius: 5px;
+    font-size: 18px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0px 4px 6px -2px rgba(0, 0, 0, 0.05);
+    transition: 2s all ease-in-out;
+}
 
 
 
