--- a/public/stylesheets/upload.css
+++ b/public/stylesheets/upload.css
@@ -2,7 +2,7 @@
     --main-bg-color: #edf5fe;
     --light-blue: #03a9f4;
     --border-color: #0288d147;
-    --container-width: 500px;
+    --container-width: 450px;
 }
 /*CSS变量 伪类文档树 :root代表着<html>元素*/
 
@@ -31,11 +31,11 @@
 }
 
 #closeUploadButton{
-
     height: 1.5em;
     width: 1.5em;
-    /*border: 1px solid black;*/
     cursor: pointer;
+    transition: 0.2s all ease-in;
+
 }
 
 #closeUploadButton img{
@@ -93,6 +93,44 @@
 #browseBtn {
   color: #2196f3;
   cursor: pointer;
+}
+
+
+.progress-container{
+    border: 2px solid var(--main-bg-color);
+    width: var(--container-width);
+    height: 22px;
+    border-radius: 10px;
+
+}
+
+.bg-progress{
+    width: 100%;
+    height: 100%;
+    background-color: #13B7EB2E; 
+}
+
+.inner-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+    
+}
+
+.inner-container .status{
+    padding-right: 0.5em;
+}
+
+.progress-bar{
+    bottom: 100%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: #E9B51546;
+    transition: transform 200ms linear;
+    transform-origin: left;
 }
 
 @media screen and (max-width: 900px){
