Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Changes to be committed:
	modified:   app.js
	modified:   index.js
	modified:   public/images/svg/more.svg
	modified:   public/js/uploadSetting.js
	modified:   public/stylesheets/file.css
	modified:   public/stylesheets/listview.css
	deleted:    public/stylesheets/setting.css
	modified:   public/stylesheets/upload.css
	modified:   routes/main.js
	modified:   views/Lab.html
	modified:   views/file.html

--- a/views/Lab.html
+++ b/views/Lab.html
@@ -26,8 +26,8 @@
             }).then(function(res) {
                 return res.json();
             }).then(function (data) {
-                document.querySelector('#exp1').innerHTML = data.message;
-                console.log(data)
+                document.querySelector('#exp1').innerHTML = `${data.ip}:${data.message}`;
+                
             });
     }
             
