--- a/public/stylesheets/file.css
+++ b/public/stylesheets/file.css
@@ -33,16 +33,21 @@ body{
 }
 
 #nav .toolitem{
-    width: 12%;
+    width: auto;
     display: flex;
 }
 
-.NavUploadProcess{
-
+.DisplaySetting{
+    border-radius: 25px;
+    transition: background-color linear 0.1s;
 }
 
-.DisplaySetting{
+.NavUploadProcess.clicked{
+    background-color: #00000080;
+}
 
+.DisplaySetting.clicked{
+    background-color: #AEB0B345;
 }
 
 #path{
@@ -90,13 +95,15 @@ body{
 
 
 #setting{
+    opacity: 0;
     position: fixed;
-    bottom: 5%;
+    bottom: 0%;
     right: 2%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     gap: 1em;
+    transition: all linear 0.3s;
 }
 
 .button_BG{
@@ -123,10 +130,9 @@ body{
 }
 
 
-.FotterToast {
+.FooterToast {
     display: flex;
     position: fixed;
-    bottom: 20%;
     right: 48.7%;
     transform: translate(50%, 60px);
     padding: 10px 20px;
@@ -139,5 +145,11 @@ body{
     transition: 2s all ease-in-out;
 }
 
+@media screen and (max-width: 900px){
+    #nav{
+        width: 90%;
+    }
 
+}
 
+        
