--- a/public/stylesheets/upload.css
+++ b/public/stylesheets/upload.css
@@ -82,6 +82,12 @@
     color: #7F7F7FAA;
 }
 
+.upload-container{
+    transition: 0.2s all ease-in;
+    background-color:rgba(33, 100, 134, 0.11);
+    box-shadow: 0px 20px 20px 0px #00000017;
+}
+
 .upload-container form{
     font-family: system-ui; /*默认都是直接用的系统内置字体 微软雅黑*/
     display: flex;
